_scss/_landing.scss
$light-blue: #2496ed;
$dark-blue: #002c66;
$bg-header-night: #101c29;
$bg-body-night: #061F2F;
$bg-card-night: #0F161E;

body#landing {
  background-color: $bg-sidebar;
  color: $body-text-color;
  font-size: $body-text-size;
  margin: $clear;
  padding: $clear;
  overflow-x: hidden;

  h2, h5, h6 {
    font-family: 'Geomanist Regular', sans-serif;
  }

  section {
    margin-top: 40px;
    margin-bottom: 40px;
  }

  .header {
    background-color: $light-blue;
    border: unset;
    border-radius: unset;
    height: unset;

    @include md-width {
      .navbar-collapse.collapse {
        display: flex !important;

        ul:first-of-type {
          flex: 1;
          display: flex;
          justify-content: center;
        }
      }
    }

    @include before-lg-width {
      .container {
        width: unset;
      }
    }

    a, .toggle-mode {
      color: white;
    }

    .navbar-brand {
      padding-top: 12px;
      padding-bottom: 12px;
    }

    .navbar-toggle {
      margin: 15px;
      height: 20px;
      display: block;

      @include md-width {
        display: none;
      }
    }

    @include md-width {
      .navbar-nav > li > a {
        font-weight: bold;
        line-height: 25px;
        padding-top: 17px;
        padding-bottom: 9px;
        border-bottom-style: solid;
        border-bottom-width: 4px;
        border-bottom-color: rgba(255, 255, 255, 0);
      }
    }

    @include md-width {
      .navbar-nav > li.active > a {
        border-bottom-color: rgba(255, 255, 255, 0.5);
      }
    }

    .toggle-mode {
      margin-top: 15px;

      .icon {
        margin-top: 4px;
      }
    }
  }

  .hero {
    padding-top: 20px;

    h2 {
      font-size: 32px;
      line-height: 32px;
      margin-bottom: 14px;
    }

    input {
      font-size: 18px;
      height: 50px;
      line-height: 24px;
      padding: 13px 20px;

      &:focus {
        box-shadow: none;
        outline: none;
      }
    }
  }

  .card-holder {
    padding: 7.5px;
  }

  %icon-card {
    background-image:  none;
    background-origin: content-box;
    background-repeat: no-repeat;
    background-size:   auto 35px;

    @include sm-width { background-size: auto 40px; min-height: 220px; }
    @include md-width { background-size: auto 50px }
    @include lg-width { background-size: auto 60px }

    .title {
      margin-top: 0;
      margin-left: 60px;
      @include sm-width { margin-left: 0; margin-top: 60px }
      @include md-width { margin-left: 0; margin-top: 72px }
      @include lg-width { margin-left: 0; margin-top: 90px }
    }

    p {
      margin-left: 60px;
      @include sm-width { margin-left: 0 }
    }
  }

  $icons: rocket, download-docker, guides, whats-new, manuals, reference;

  .card {
    background-color: $bg-body;
    box-shadow: 0 3px 6px rgba(11, 33, 74, 0.09),
      0 -2px 2px rgba(11, 33, 74, 0.03);
    padding: 24px 36px;
    min-height: 100px;

    @include sm-width {
      min-height: 185px;
    }

    @each $icon in $icons {
      &.#{$icon} {
        @extend %icon-card;
        background-image: url("/images/#{$icon}.svg");
      }
    }

    .title {
      font-size: 16px;
      line-height: 16px;
      margin: 8px 0;

      @include sm-width {
        font-size: 18px;
        line-height: 18px;
        margin: 6px 0;
      }

      @include md-width {
        font-size: 20px;
        line-height: 20px;
        margin: 6px 0;
      }

      @include lg-width {
        font-size: 22px;
        line-height: 22px;
        margin: 8px 0;
      }
    }

    p {
      font-size: 14px;
      line-height: 19px;
    }
  }

  a.card {
    display: block;
    transition: transform 150ms ease-in-out;

    &:focus,
    &:visited {
      text-decoration: none;
    }

    &:hover {
      opacity: 1;
      transform: scale(1.01);
    }

    &[target=_blank] {
      background-image:    url(/images/arrow.svg);
      background-position: top 10px right 10px;
      background-repeat:   no-repeat;
      background-size:     15px 15px;
    }
  }

  .cardlet {
    background-color: #F2F3F5;
    padding: 24px 36px;

    .title {
      font-family: 'Geomanist Book', sans-serif;
      line-height: 22px;
      font-size: 22px;
    }

    p {
      font-size: 14px;
      line-height: 18px;
    }
  }

  section.join-community {
    background-color: $dark-blue;
    padding: 75px 0;

    h2, h5, p {
      color: white;
    }

    &.dockercon {
      text-align: center;

      @include md-width {
        text-align: left;
      }

      img {
        margin-bottom: 20px;
        max-height: 100px;
      }

      h2 {
        color: white;
        font-size: 32px;
        line-height: 37px;;
      }

      a.btn {
        background-color: #FF3F73;
        color: white;
        font-family: 'Open Sans', sans-serif;
        font-size: 17px;
        font-weight: bold;
        padding: 20px 60px;
        margin-top: 50px;
      }
    }

    &.slack {
      a.slack-button {
        background: #FFFFFF;
        border: 2px solid #FFFFFF;
        box-sizing: border-box;
        border-radius: 3px;
        align-items: center;
        display: inline-flex;
        padding: 0 26px 0 2px;
        text-transform: none;
        margin-top: 2rem;

        img {
          height: 56px;
          width: 56px;
        }
        span {
          font-weight: bold;
          font-size: 17px;
          line-height: 24px;
          color: $dark-blue;
        }
      }
    }
  }

  .help-by-product {
    .title {
      font-family: 'Geomanist Book', sans-serif;
      font-size: 22px;
    }

    ul.nav.nav-tabs li a, h5, h6 {
      font-family: 'Geomanist Regular', sans-serif;
      font-size: 18px;
    }

    ul.nav.nav-tabs {
      margin-bottom: 30px;

      li a {
        cursor: pointer;
      }

      li.active a {
        background-color: inherit;
        border: none;
        border-bottom: 5px solid $dark-blue;
      }
    }

    .row[data-tab] {
      display: none;

      &[data-os] .only-win,
      &[data-os] .only-mac {
        display: none;
      }

      &[data-os="win"] .only-win,
      &[data-os="mac"] .only-mac {
        display: initial;
      }

      &[data-os="win"] p.only-win,
      &[data-os="mac"] p.only-mac {
        display: block;
      }

      &.active {
        display: block;
      }

      .image {
        background-position: center;
        background-size: contain;
        background-repeat: no-repeat;
        margin-top: 15px;
        width: 130px;
        height: 130px;
        margin-left: auto;
        margin-right: auto;
      }
    }
  }

  footer.footer {
    background-color: $dark-blue;
    margin-top: 130px;

    a, p {
      color: white;
    }
  }
}

body#landing.night {
  background-color: $bg-body-night;
  color: $body-text-color-night;

  .header {
    background-color: $bg-body-night;
  }

  .card {
    background-color: $bg-card-night;
  }

  .cardlet {
    background-color: $bg-card-night;
  }
}

